# LeRemix

./: .gitignore  README.md  package-lock.json
firmware/: README.md  platformio.ini
firmware/hardware_interface/: README.md  platformio.ini
firmware/hardware_interface/src/: base_subscriber.cpp  config.h  joint_publisher.cpp  microros.h  motor_controller.cpp  motor_controller.h  utils.cpp  utils.h
firmware/microros_servo_driver/: platformio.ini
firmware/microros_servo_driver/src/: Motor.cpp  Motor.h  STSServoDriver.h  arm_subscriber.cpp  arm_subscriber.h  base_subscriber.cpp  base_subscriber.h  config.h  joint_publisher.cpp  joint_publisher.h  main.cpp  microros.cpp  microros.h  motor_controller.cpp  motor_controller.h  utils.cpp  utils.h
firmware/microros_servo_driver_v2/: platformio.ini
firmware/microros_servo_driver_v2/include/: button_manager.h  config.h  debug_utils.h  display_manager.h  microros_manager.h  neopixel_manager.h  servo_manager.h  system_state.h
firmware/microros_servo_driver_v2/src/: button_manager.cpp  config.cpp  debug_utils.cpp  display_manager.cpp  main.cpp  microros_manager.cpp  neopixel_manager.cpp  servo_manager.cpp  system_state.cpp
firmware/microros_tester/: README.md  platformio.ini
firmware/microros_tester/src/: main.cpp
firmware/servo_test_sketch/: platformio.ini
firmware/servo_test_sketch/src/: main.cpp
firmware/simple_logger/: platformio.ini
firmware/simple_logger/src/: main.cpp
firmware/simple_microros_servo/: platformio.ini
firmware/simple_microros_servo/src/: STSServoDriver.cpp  arm_subscriber.cpp  arm_subscriber.h  base_subscriber.cpp  base_subscriber.h  debug_serial.h  joint_publisher.cpp  joint_publisher.h  main.cpp  microros.cpp  motor_controller.cpp  motor_controller.h  utils.cpp  utils.h
firmware/src/: config.h  main.cpp
ros/src/leremix_bringup/: CMakeLists.txt  package.xml
ros/src/leremix_bringup/launch/: bringup.launch.py  bringup_desktop.launch.py  bringup_robot.launch.py
ros/src/leremix_camera/: CMakeLists.txt  README.md  package.xml
ros/src/leremix_camera/config/: depthimage_to_laserscan.yaml  realsense.yaml
ros/src/leremix_camera/launch/: camera.launch.py  realsense_only.launch.py
ros/src/leremix_control/: CMakeLists.txt  README.md  package.xml  test_motion.py
ros/src/leremix_control/config/: controllers.base.yaml  controllers.hw.yaml  controllers.sim.yaml
ros/src/leremix_control_plugin/: CMakeLists.txt  README.md  package.xml  plugin_description.xml
ros/src/leremix_control_plugin/config/: controllers.yaml  ros2_control_esp32_bridge.yaml
ros/src/leremix_control_plugin/include/leremix_control_plugin/: esp32_system_topic.hpp
ros/src/leremix_control_plugin/launch/: bringup.launch.py
ros/src/leremix_control_plugin/src/: esp32_system_topic.cpp
ros/src/leremix_description/: CMakeLists.txt  README.md  package.xml
ros/src/leremix_description/meshes/: arm_base_1.stl  arm_base_rotation_link_cover_1.stl  arm_base_rotation_servo_1.stl  arm_elbow_link_1.stl  arm_elbow_servo_1.stl  arm_gripper_1.stl  arm_gripper_servo_1.stl  arm_jaw_1.stl  arm_shoulder_link_1.stl  arm_shoulder_servo_1.stl  arm_wrist_link_1.stl  arm_wrist_roll_servo_1.stl  arm_wrist_tilt_servo_1.stl  back_servo_1.stl  back_servo_mount_1.stl  back_wheel_mount_1.stl  base_link.stl  baseus_pack_v1_1.stl  camera_1.stl  camera_tilt_mount_v1_1.stl  hex_1_1.stl  hex_2_1.stl  hex_3_1.stl  hex_4_1.stl  hex_5_1.stl  hex_6_1.stl  hex_7_1.stl  hex_7__1__1.stl  hex_8_1.stl  imu_1.stl  imu_mount_1.stl  last_floor_v1_1.stl  left_baseus_mount_v1_1.stl  left_servo_1.stl  left_servo_mount_1.stl  left_wheel_mount_1.stl  orin_mount_1.stl  pan_servo_1.stl  panny_v1_1.stl  right_baseus_mount_v1_1.stl  (+5 more)
ros/src/leremix_description/urdf/: LeRemix.trans  LeRemix.xacro  materials.xacro
ros/src/leremix_gazebo/: CMakeLists.txt  README.md  package.xml
ros/src/leremix_gazebo/launch/: sim.launch.py
ros/src/leremix_gazebo/urdf/: gazebo_configs.xacro  gazebo_interfaces.xacro  gazebo_plugins.xacro  initial_positions.xacro  joint_limits.xacro  leremix_gazebo_overlay.xacro
ros/src/leremix_gazebo/worlds/: sticky_floor.world
ros/src/leremix_imu/: README.md  package.xml  setup.cfg  setup.py
ros/src/leremix_imu/launch/: imu.launch.py
ros/src/leremix_imu/leremix_imu/: imu_node.py
ros/src/leremix_teleop_xbox/: README.md  package.xml  setup.cfg  setup.py
ros/src/leremix_teleop_xbox/launch/: teleop_xbox.launch.py
ros/src/leremix_teleop_xbox/leremix_teleop_xbox/: __init__.py  joystick_driver.py  teleop_xbox.py  test_joystick.py
