<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>leremix_bringup</name>
  <version>0.0.1</version>
  <description>Bringup package for LeRemix robot - launches camera, IMU, micro-ROS agent, and ros2_control</description>
  <maintainer email="user@example.com">User</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Launch system dependencies -->
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <!-- Component package dependencies -->
  <exec_depend>leremix_camera</exec_depend>
  <exec_depend>leremix_imu</exec_depend>
  <exec_depend>leremix_teleop_xbox</exec_depend>
  <exec_depend>leremix_control_plugin</exec_depend>
  <exec_depend>leremix_description</exec_depend>
  
  <!-- Robot description dependencies -->
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>xacro</exec_depend>
  
  <!-- Controller manager and micro-ROS -->
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>micro_ros_agent</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>