<package format="3">
  <name>leremix_description</name>
  <version>0.0.1</version>
  <description>LeRemix robot description (URDF/Xacro, meshes)</description>
  <maintainer email="you@example.com">you</maintainer>
  <license>MIT</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>xacro</exec_depend>
  <export><build_type>ament_cmake</build_type></export>
</package>
