<package format="3">
  <name>leremix_gazebo</name>
  <version>0.0.1</version>
  <description>Gazebo overlay and simulation launch for LeRemix</description>
  <maintainer email="you@example.com">you</maintainer>
  <license>MIT</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>leremix_description</exec_depend>
  <exec_depend>leremix_control</exec_depend>
  <export><build_type>ament_cmake</build_type></export>
</package>
